--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,7 +4,7 @@
                <h1 class="text-center mb-3">
                     <i class="fas fa-user-plus"></i> Register
                </h1>
-               
+              <% include ./partials/messages %>
                <form action="/users/register" method="POST">
                     <div class="form-group">
                          <label for="name">Name</label>
@@ -21,6 +21,7 @@
                          <input type="password" id="password" name="password" class="form-control"
                               placeholder="Create Password"
                               value="<%= typeof password != 'undefined' ? password : '' %>" />
+                         <p> * Password need To at least 6 character</p>
                     </div>
                     <div class="form-group">
                          <label for="password2">Confirm Password</label>
